改写 class.getInstance